# CPathTracer

./: CMakeLists.txt  camera.c  camera.h  common.h  cpathtracer.sublime-project  cpathtracer.sublime-workspace  hitable.c  hitable.h  hitable_list.c  hitable_list.h  main.c  ray.c  ray.h  sphere.c  sphere.h  vec3.c  vec3.h
tests/: CMakeLists.txt  ray_tests.cpp  vec3_tests.cpp
